<resources >
    <string name="app_name">Yamblz_Forecast</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_weather">Weather</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="about">Homework for Mobilization 2017</string>
    <string name="pref_first">Preference 1</string>
    <string name="pref_first_summ">Preference 1 summary</string>

    <string name="pref_temp_units_title">Units</string>

    <string name="celcius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>

    <string name="pref_sync_title">Refresh interval</string>

    <string name="interval_hour">Hour</string>
    <string name="interval_two_hours">Two hours</string>
    <string name="interval_three_hours">Three hours</string>
    <string name="interval_five_hours">Five hours</string>
    <string name="interval_day">Day</string>

    <string name="key_chosen_fragment" translatable="false">chosen_fragment</string>

    <string name="format_temperature" translatable="false">%1.0f\u00B0%s</string>
    <string name="format_humidity">%d %%</string>
    <string name="format_wind">%d m/s</string>
    <string name="format_pressure">Pressure: %d mm Hg</string>
    <string name="format_min_max_temp" formatted="false" translatable="false">%s - %s</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>

    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="no_internet_message">Please, check your internet connection</string>
    <string name="ok" translatable="false">Ok</string>

    <string name="choose_city">Choose the city</string>


    <string name="delete_title">%s is a good city</string>
    <string name="delete_text">Are you sure you want to delete it from favorites?</string>
    <string name="delete_ok">Delete</string>
    <string name="delete_cancel">Nooo!</string>

    <string name="add_city">Add new city</string>
    <string name="new_city">New city</string>
</resources>
