<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:padding="@dimen/margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_text"
        android:id="@+id/delete_text"/>

    <TextView
        android:padding="@dimen/margin_small"
        android:layout_below="@id/delete_text"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text"
        android:text="@string/delete_ok"
        android:id="@+id/delete_ok"/>

    <TextView
        android:layout_below="@id/delete_text"
        android:layout_toLeftOf="@id/delete_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:textSize="@dimen/small_text"
        android:text="@string/delete_cancel"
        android:id="@+id/delete_cancel"/>
</RelativeLayout>